--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sanity/client": "^6.22.0",
+    "framer-motion": "^12.23.12",
     "next": "15.4.6",
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
