--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browserslist": [
+    "> 0.5%",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@sanity/client": "^6.22.0",
     "framer-motion": "^12.23.12",
