feat: Build contact page and implement scalable icon system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
+// FILE: tsconfig.json (REPLACE ENTIRE FILE)
 {
   "compilerOptions": {
-    "target": "es2020", // <-- FIX: Use a modern JS version
+    "target": "es2020",
     "lib": [
       "dom",
       "dom.iterable",
@@ -36,6 +37,7 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "sanity" 
   ]
 }
