--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
   ],
   "dependencies": {
     "@sanity/client": "^6.22.0",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^4.5.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.6",
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
+    "next-sanity": "^10.0.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sanity": "^4.5.0",
+    "styled-components": "^6.1.19",
     "three": "^0.167.0"
   },
   "devDependencies": {
